// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly when default 1`] = `
<div>
  <button
    class="button"
    type="submit"
  >
    Button
  </button>
</div>
`;

exports[`Button should render correctly when disabled 1`] = `
<div>
  <button
    class="button"
    disabled=""
    type="submit"
  >
    Button
  </button>
</div>
`;
